fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,12 @@ input[type="radio"] ~ label {
 }
 
 .navigation {
-  position: relative;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .navigation .leftArrow,
